// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextField /> TextField render sizes size "large" 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: var(--pv-color-black);
  font-weight: var(--pv-text-b3-weight);
  font-size: var(--pv-text-b3-size);
  line-height: var(--pv-text-b3-height);
  letter-spacing: var(--pv-text-b3-spacing);
  font-family: inherit;
  outline: none;
  box-sizing: border-box;
  width: 100%;
  border-radius: 4px;
  padding: 0 var(--pv-size-base-2);
  background-color: var(--pv-color-gray-1);
  border-style: solid;
  border-width: 1px;
  -webkit-transition: background-color 200ms,color 200ms,border-color 200ms;
  transition: background-color 200ms,color 200ms,border-color 200ms;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  height: var(--pv-size-base-8);
  color: var(--pv-color-black);
  border-color: var(--pv-color-gray-8);
}

.emotion-0::-webkit-input-placeholder {
  color: var(--pv-color-gray-9);
}

.emotion-0::-moz-placeholder {
  color: var(--pv-color-gray-9);
}

.emotion-0:-ms-input-placeholder {
  color: var(--pv-color-gray-9);
}

.emotion-0::placeholder {
  color: var(--pv-color-gray-9);
}

.emotion-0:hover {
  border-color: var(--pv-color-gray-10);
}

.emotion-0:disabled {
  cursor: not-allowed;
  border-color: var(--pv-color-gray-5);
  color: var(--pv-color-gray-7);
}

.emotion-0:not(:disabled)[aria-invalid] {
  border-color: var(--pv-color-wrong);
}

.emotion-0:not(:disabled):focus-visible {
  border-color: var(--pv-color-secondary);
}

<div>
    <input
      class="emotion-0"
      id="test-id"
      type="text"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`<TextField /> TextField render sizes size "medium" 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: var(--pv-color-black);
  font-weight: var(--pv-text-b3-weight);
  font-size: var(--pv-text-b3-size);
  line-height: var(--pv-text-b3-height);
  letter-spacing: var(--pv-text-b3-spacing);
  font-family: inherit;
  outline: none;
  box-sizing: border-box;
  width: 100%;
  border-radius: 4px;
  padding: 0 var(--pv-size-base-2);
  background-color: var(--pv-color-gray-1);
  border-style: solid;
  border-width: 1px;
  -webkit-transition: background-color 200ms,color 200ms,border-color 200ms;
  transition: background-color 200ms,color 200ms,border-color 200ms;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  height: var(--pv-size-base-7);
  color: var(--pv-color-black);
  border-color: var(--pv-color-gray-8);
}

.emotion-0::-webkit-input-placeholder {
  color: var(--pv-color-gray-9);
}

.emotion-0::-moz-placeholder {
  color: var(--pv-color-gray-9);
}

.emotion-0:-ms-input-placeholder {
  color: var(--pv-color-gray-9);
}

.emotion-0::placeholder {
  color: var(--pv-color-gray-9);
}

.emotion-0:hover {
  border-color: var(--pv-color-gray-10);
}

.emotion-0:disabled {
  cursor: not-allowed;
  border-color: var(--pv-color-gray-5);
  color: var(--pv-color-gray-7);
}

.emotion-0:not(:disabled)[aria-invalid] {
  border-color: var(--pv-color-wrong);
}

.emotion-0:not(:disabled):focus-visible {
  border-color: var(--pv-color-secondary);
}

<div>
    <input
      class="emotion-0"
      id="test-id"
      type="text"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`<TextField /> TextField render sizes size "small" 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: var(--pv-color-black);
  font-weight: var(--pv-text-c1-weight);
  font-size: var(--pv-text-c1-size);
  line-height: var(--pv-text-c1-height);
  letter-spacing: var(--pv-text-c1-spacing);
  font-family: inherit;
  outline: none;
  box-sizing: border-box;
  width: 100%;
  border-radius: 4px;
  padding: 0 var(--pv-size-base-2);
  background-color: var(--pv-color-gray-1);
  border-style: solid;
  border-width: 1px;
  -webkit-transition: background-color 200ms,color 200ms,border-color 200ms;
  transition: background-color 200ms,color 200ms,border-color 200ms;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  height: var(--pv-size-base-6);
  color: var(--pv-color-black);
  border-color: var(--pv-color-gray-8);
}

.emotion-0::-webkit-input-placeholder {
  color: var(--pv-color-gray-9);
}

.emotion-0::-moz-placeholder {
  color: var(--pv-color-gray-9);
}

.emotion-0:-ms-input-placeholder {
  color: var(--pv-color-gray-9);
}

.emotion-0::placeholder {
  color: var(--pv-color-gray-9);
}

.emotion-0:hover {
  border-color: var(--pv-color-gray-10);
}

.emotion-0:disabled {
  cursor: not-allowed;
  border-color: var(--pv-color-gray-5);
  color: var(--pv-color-gray-7);
}

.emotion-0:not(:disabled)[aria-invalid] {
  border-color: var(--pv-color-wrong);
}

.emotion-0:not(:disabled):focus-visible {
  border-color: var(--pv-color-secondary);
}

<div>
    <input
      class="emotion-0"
      id="test-id"
      type="text"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`<TextField /> TextField render variants should be disabled 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: var(--pv-color-black);
  font-weight: var(--pv-text-b3-weight);
  font-size: var(--pv-text-b3-size);
  line-height: var(--pv-text-b3-height);
  letter-spacing: var(--pv-text-b3-spacing);
  font-family: inherit;
  outline: none;
  box-sizing: border-box;
  width: 100%;
  border-radius: 4px;
  padding: 0 var(--pv-size-base-2);
  background-color: var(--pv-color-gray-1);
  border-style: solid;
  border-width: 1px;
  -webkit-transition: background-color 200ms,color 200ms,border-color 200ms;
  transition: background-color 200ms,color 200ms,border-color 200ms;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  height: var(--pv-size-base-7);
  color: var(--pv-color-black);
  border-color: var(--pv-color-gray-8);
}

.emotion-0::-webkit-input-placeholder {
  color: var(--pv-color-gray-9);
}

.emotion-0::-moz-placeholder {
  color: var(--pv-color-gray-9);
}

.emotion-0:-ms-input-placeholder {
  color: var(--pv-color-gray-9);
}

.emotion-0::placeholder {
  color: var(--pv-color-gray-9);
}

.emotion-0:hover {
  border-color: var(--pv-color-gray-10);
}

.emotion-0:disabled {
  cursor: not-allowed;
  border-color: var(--pv-color-gray-5);
  color: var(--pv-color-gray-7);
}

.emotion-0:not(:disabled)[aria-invalid] {
  border-color: var(--pv-color-wrong);
}

.emotion-0:not(:disabled):focus-visible {
  border-color: var(--pv-color-secondary);
}

<div>
    <input
      class="emotion-0"
      disabled=""
      id="test-id"
      type="text"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`<TextField /> TextField render variants should have className 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: var(--pv-color-black);
  font-weight: var(--pv-text-b3-weight);
  font-size: var(--pv-text-b3-size);
  line-height: var(--pv-text-b3-height);
  letter-spacing: var(--pv-text-b3-spacing);
  font-family: inherit;
  outline: none;
  box-sizing: border-box;
  width: 100%;
  border-radius: 4px;
  padding: 0 var(--pv-size-base-2);
  background-color: var(--pv-color-gray-1);
  border-style: solid;
  border-width: 1px;
  -webkit-transition: background-color 200ms,color 200ms,border-color 200ms;
  transition: background-color 200ms,color 200ms,border-color 200ms;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  height: var(--pv-size-base-7);
  color: var(--pv-color-black);
  border-color: var(--pv-color-gray-8);
}

.emotion-0::-webkit-input-placeholder {
  color: var(--pv-color-gray-9);
}

.emotion-0::-moz-placeholder {
  color: var(--pv-color-gray-9);
}

.emotion-0:-ms-input-placeholder {
  color: var(--pv-color-gray-9);
}

.emotion-0::placeholder {
  color: var(--pv-color-gray-9);
}

.emotion-0:hover {
  border-color: var(--pv-color-gray-10);
}

.emotion-0:disabled {
  cursor: not-allowed;
  border-color: var(--pv-color-gray-5);
  color: var(--pv-color-gray-7);
}

.emotion-0:not(:disabled)[aria-invalid] {
  border-color: var(--pv-color-wrong);
}

.emotion-0:not(:disabled):focus-visible {
  border-color: var(--pv-color-secondary);
}

<div
    class="div-cls"
  >
    <input
      class="input-cls emotion-0"
      id="test-id"
      type="text"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`<TextField /> TextField render variants should have defaultValue 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: var(--pv-color-black);
  font-weight: var(--pv-text-b3-weight);
  font-size: var(--pv-text-b3-size);
  line-height: var(--pv-text-b3-height);
  letter-spacing: var(--pv-text-b3-spacing);
  font-family: inherit;
  outline: none;
  box-sizing: border-box;
  width: 100%;
  border-radius: 4px;
  padding: 0 var(--pv-size-base-2);
  background-color: var(--pv-color-gray-1);
  border-style: solid;
  border-width: 1px;
  -webkit-transition: background-color 200ms,color 200ms,border-color 200ms;
  transition: background-color 200ms,color 200ms,border-color 200ms;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  height: var(--pv-size-base-7);
  color: var(--pv-color-black);
  border-color: var(--pv-color-gray-8);
}

.emotion-0::-webkit-input-placeholder {
  color: var(--pv-color-gray-9);
}

.emotion-0::-moz-placeholder {
  color: var(--pv-color-gray-9);
}

.emotion-0:-ms-input-placeholder {
  color: var(--pv-color-gray-9);
}

.emotion-0::placeholder {
  color: var(--pv-color-gray-9);
}

.emotion-0:hover {
  border-color: var(--pv-color-gray-10);
}

.emotion-0:disabled {
  cursor: not-allowed;
  border-color: var(--pv-color-gray-5);
  color: var(--pv-color-gray-7);
}

.emotion-0:not(:disabled)[aria-invalid] {
  border-color: var(--pv-color-wrong);
}

.emotion-0:not(:disabled):focus-visible {
  border-color: var(--pv-color-secondary);
}

<div>
    <input
      class="emotion-0"
      id="test-id"
      type="text"
      value="test-value"
    />
  </div>
</DocumentFragment>
`;

exports[`<TextField /> TextField render variants should have error alert 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: var(--pv-color-black);
  font-weight: var(--pv-text-b3-weight);
  font-size: var(--pv-text-b3-size);
  line-height: var(--pv-text-b3-height);
  letter-spacing: var(--pv-text-b3-spacing);
  font-family: inherit;
  outline: none;
  box-sizing: border-box;
  width: 100%;
  border-radius: 4px;
  padding: 0 var(--pv-size-base-2);
  background-color: var(--pv-color-gray-1);
  border-style: solid;
  border-width: 1px;
  -webkit-transition: background-color 200ms,color 200ms,border-color 200ms;
  transition: background-color 200ms,color 200ms,border-color 200ms;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  height: var(--pv-size-base-7);
  color: var(--pv-color-black);
  border-color: var(--pv-color-gray-8);
}

.emotion-0::-webkit-input-placeholder {
  color: var(--pv-color-gray-9);
}

.emotion-0::-moz-placeholder {
  color: var(--pv-color-gray-9);
}

.emotion-0:-ms-input-placeholder {
  color: var(--pv-color-gray-9);
}

.emotion-0::placeholder {
  color: var(--pv-color-gray-9);
}

.emotion-0:hover {
  border-color: var(--pv-color-gray-10);
}

.emotion-0:disabled {
  cursor: not-allowed;
  border-color: var(--pv-color-gray-5);
  color: var(--pv-color-gray-7);
}

.emotion-0:not(:disabled)[aria-invalid] {
  border-color: var(--pv-color-wrong);
}

.emotion-0:not(:disabled):focus-visible {
  border-color: var(--pv-color-secondary);
}

.emotion-1 {
  margin: 0;
  color: var(--pv-color-wrong);
  font-weight: var(--pv-text-c2-weight);
  font-size: var(--pv-text-c2-size);
  line-height: var(--pv-text-c2-height);
  letter-spacing: var(--pv-text-c2-spacing);
  margin-top: 2px;
}

<div>
    <input
      aria-invalid="true"
      class="emotion-0"
      id="test-id"
      type="text"
      value=""
    />
    <p
      class="emotion-1"
    >
      Error message
    </p>
  </div>
</DocumentFragment>
`;

exports[`<TextField /> TextField render variants should have label 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin-bottom: 2px;
  display: inline-block;
}

.emotion-1 {
  margin: 0;
  color: var(--pv-color-gray-10);
  font-weight: var(--pv-text-c2-weight);
  font-size: var(--pv-text-c2-size);
  line-height: var(--pv-text-c2-height);
  letter-spacing: var(--pv-text-c2-spacing);
}

.emotion-2 {
  margin: 0;
  color: var(--pv-color-black);
  font-weight: var(--pv-text-b3-weight);
  font-size: var(--pv-text-b3-size);
  line-height: var(--pv-text-b3-height);
  letter-spacing: var(--pv-text-b3-spacing);
  font-family: inherit;
  outline: none;
  box-sizing: border-box;
  width: 100%;
  border-radius: 4px;
  padding: 0 var(--pv-size-base-2);
  background-color: var(--pv-color-gray-1);
  border-style: solid;
  border-width: 1px;
  -webkit-transition: background-color 200ms,color 200ms,border-color 200ms;
  transition: background-color 200ms,color 200ms,border-color 200ms;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  height: var(--pv-size-base-7);
  color: var(--pv-color-black);
  border-color: var(--pv-color-gray-8);
}

.emotion-2::-webkit-input-placeholder {
  color: var(--pv-color-gray-9);
}

.emotion-2::-moz-placeholder {
  color: var(--pv-color-gray-9);
}

.emotion-2:-ms-input-placeholder {
  color: var(--pv-color-gray-9);
}

.emotion-2::placeholder {
  color: var(--pv-color-gray-9);
}

.emotion-2:hover {
  border-color: var(--pv-color-gray-10);
}

.emotion-2:disabled {
  cursor: not-allowed;
  border-color: var(--pv-color-gray-5);
  color: var(--pv-color-gray-7);
}

.emotion-2:not(:disabled)[aria-invalid] {
  border-color: var(--pv-color-wrong);
}

.emotion-2:not(:disabled):focus-visible {
  border-color: var(--pv-color-secondary);
}

<div>
    <label
      class="emotion-0"
      for="test-id"
      id="test-id-label"
    >
      <span
        class="emotion-1"
      >
        Test label
      </span>
    </label>
    <input
      class="emotion-2"
      id="test-id"
      type="text"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`<TextField /> TextField render variants should have name attr 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: var(--pv-color-black);
  font-weight: var(--pv-text-b3-weight);
  font-size: var(--pv-text-b3-size);
  line-height: var(--pv-text-b3-height);
  letter-spacing: var(--pv-text-b3-spacing);
  font-family: inherit;
  outline: none;
  box-sizing: border-box;
  width: 100%;
  border-radius: 4px;
  padding: 0 var(--pv-size-base-2);
  background-color: var(--pv-color-gray-1);
  border-style: solid;
  border-width: 1px;
  -webkit-transition: background-color 200ms,color 200ms,border-color 200ms;
  transition: background-color 200ms,color 200ms,border-color 200ms;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  height: var(--pv-size-base-7);
  color: var(--pv-color-black);
  border-color: var(--pv-color-gray-8);
}

.emotion-0::-webkit-input-placeholder {
  color: var(--pv-color-gray-9);
}

.emotion-0::-moz-placeholder {
  color: var(--pv-color-gray-9);
}

.emotion-0:-ms-input-placeholder {
  color: var(--pv-color-gray-9);
}

.emotion-0::placeholder {
  color: var(--pv-color-gray-9);
}

.emotion-0:hover {
  border-color: var(--pv-color-gray-10);
}

.emotion-0:disabled {
  cursor: not-allowed;
  border-color: var(--pv-color-gray-5);
  color: var(--pv-color-gray-7);
}

.emotion-0:not(:disabled)[aria-invalid] {
  border-color: var(--pv-color-wrong);
}

.emotion-0:not(:disabled):focus-visible {
  border-color: var(--pv-color-secondary);
}

<div>
    <input
      class="emotion-0"
      id="test-id"
      name="test-name"
      type="text"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`<TextField /> TextField render variants should have placeholder 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: var(--pv-color-black);
  font-weight: var(--pv-text-b3-weight);
  font-size: var(--pv-text-b3-size);
  line-height: var(--pv-text-b3-height);
  letter-spacing: var(--pv-text-b3-spacing);
  font-family: inherit;
  outline: none;
  box-sizing: border-box;
  width: 100%;
  border-radius: 4px;
  padding: 0 var(--pv-size-base-2);
  background-color: var(--pv-color-gray-1);
  border-style: solid;
  border-width: 1px;
  -webkit-transition: background-color 200ms,color 200ms,border-color 200ms;
  transition: background-color 200ms,color 200ms,border-color 200ms;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  height: var(--pv-size-base-7);
  color: var(--pv-color-black);
  border-color: var(--pv-color-gray-8);
}

.emotion-0::-webkit-input-placeholder {
  color: var(--pv-color-gray-9);
}

.emotion-0::-moz-placeholder {
  color: var(--pv-color-gray-9);
}

.emotion-0:-ms-input-placeholder {
  color: var(--pv-color-gray-9);
}

.emotion-0::placeholder {
  color: var(--pv-color-gray-9);
}

.emotion-0:hover {
  border-color: var(--pv-color-gray-10);
}

.emotion-0:disabled {
  cursor: not-allowed;
  border-color: var(--pv-color-gray-5);
  color: var(--pv-color-gray-7);
}

.emotion-0:not(:disabled)[aria-invalid] {
  border-color: var(--pv-color-wrong);
}

.emotion-0:not(:disabled):focus-visible {
  border-color: var(--pv-color-secondary);
}

<div>
    <input
      class="emotion-0"
      id="test-id"
      placeholder="test-placeholder"
      type="text"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`<TextField /> TextField render variants should have required 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: var(--pv-color-black);
  font-weight: var(--pv-text-b3-weight);
  font-size: var(--pv-text-b3-size);
  line-height: var(--pv-text-b3-height);
  letter-spacing: var(--pv-text-b3-spacing);
  font-family: inherit;
  outline: none;
  box-sizing: border-box;
  width: 100%;
  border-radius: 4px;
  padding: 0 var(--pv-size-base-2);
  background-color: var(--pv-color-gray-1);
  border-style: solid;
  border-width: 1px;
  -webkit-transition: background-color 200ms,color 200ms,border-color 200ms;
  transition: background-color 200ms,color 200ms,border-color 200ms;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  height: var(--pv-size-base-7);
  color: var(--pv-color-black);
  border-color: var(--pv-color-gray-8);
}

.emotion-0::-webkit-input-placeholder {
  color: var(--pv-color-gray-9);
}

.emotion-0::-moz-placeholder {
  color: var(--pv-color-gray-9);
}

.emotion-0:-ms-input-placeholder {
  color: var(--pv-color-gray-9);
}

.emotion-0::placeholder {
  color: var(--pv-color-gray-9);
}

.emotion-0:hover {
  border-color: var(--pv-color-gray-10);
}

.emotion-0:disabled {
  cursor: not-allowed;
  border-color: var(--pv-color-gray-5);
  color: var(--pv-color-gray-7);
}

.emotion-0:not(:disabled)[aria-invalid] {
  border-color: var(--pv-color-wrong);
}

.emotion-0:not(:disabled):focus-visible {
  border-color: var(--pv-color-secondary);
}

<div>
    <input
      class="emotion-0"
      id="test-id"
      required=""
      type="text"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`<TextField /> TextField render variants should have value 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: var(--pv-color-black);
  font-weight: var(--pv-text-b3-weight);
  font-size: var(--pv-text-b3-size);
  line-height: var(--pv-text-b3-height);
  letter-spacing: var(--pv-text-b3-spacing);
  font-family: inherit;
  outline: none;
  box-sizing: border-box;
  width: 100%;
  border-radius: 4px;
  padding: 0 var(--pv-size-base-2);
  background-color: var(--pv-color-gray-1);
  border-style: solid;
  border-width: 1px;
  -webkit-transition: background-color 200ms,color 200ms,border-color 200ms;
  transition: background-color 200ms,color 200ms,border-color 200ms;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  height: var(--pv-size-base-7);
  color: var(--pv-color-black);
  border-color: var(--pv-color-gray-8);
}

.emotion-0::-webkit-input-placeholder {
  color: var(--pv-color-gray-9);
}

.emotion-0::-moz-placeholder {
  color: var(--pv-color-gray-9);
}

.emotion-0:-ms-input-placeholder {
  color: var(--pv-color-gray-9);
}

.emotion-0::placeholder {
  color: var(--pv-color-gray-9);
}

.emotion-0:hover {
  border-color: var(--pv-color-gray-10);
}

.emotion-0:disabled {
  cursor: not-allowed;
  border-color: var(--pv-color-gray-5);
  color: var(--pv-color-gray-7);
}

.emotion-0:not(:disabled)[aria-invalid] {
  border-color: var(--pv-color-wrong);
}

.emotion-0:not(:disabled):focus-visible {
  border-color: var(--pv-color-secondary);
}

<div>
    <input
      class="emotion-0"
      id="test-id"
      type="text"
      value="test-value"
    />
  </div>
</DocumentFragment>
`;

exports[`<TextField /> TextField render variants should render as default 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: var(--pv-color-black);
  font-weight: var(--pv-text-b3-weight);
  font-size: var(--pv-text-b3-size);
  line-height: var(--pv-text-b3-height);
  letter-spacing: var(--pv-text-b3-spacing);
  font-family: inherit;
  outline: none;
  box-sizing: border-box;
  width: 100%;
  border-radius: 4px;
  padding: 0 var(--pv-size-base-2);
  background-color: var(--pv-color-gray-1);
  border-style: solid;
  border-width: 1px;
  -webkit-transition: background-color 200ms,color 200ms,border-color 200ms;
  transition: background-color 200ms,color 200ms,border-color 200ms;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  height: var(--pv-size-base-7);
  color: var(--pv-color-black);
  border-color: var(--pv-color-gray-8);
}

.emotion-0::-webkit-input-placeholder {
  color: var(--pv-color-gray-9);
}

.emotion-0::-moz-placeholder {
  color: var(--pv-color-gray-9);
}

.emotion-0:-ms-input-placeholder {
  color: var(--pv-color-gray-9);
}

.emotion-0::placeholder {
  color: var(--pv-color-gray-9);
}

.emotion-0:hover {
  border-color: var(--pv-color-gray-10);
}

.emotion-0:disabled {
  cursor: not-allowed;
  border-color: var(--pv-color-gray-5);
  color: var(--pv-color-gray-7);
}

.emotion-0:not(:disabled)[aria-invalid] {
  border-color: var(--pv-color-wrong);
}

.emotion-0:not(:disabled):focus-visible {
  border-color: var(--pv-color-secondary);
}

<div>
    <input
      class="emotion-0"
      id="test-id"
      type="text"
      value=""
    />
  </div>
</DocumentFragment>
`;
